--- a/rancid/bin/htlogin.in
+++ b/rancid/bin/htlogin.in
@@ -10,6 +10,8 @@
 # Most options are intuitive for logging into an Hitachi router login.
 #
 
+# XXX need to import login_top.
+
 # Usage line
 set usage "Usage: $argv0 \[-dSV\] \[-noenable\] \[-c command\] \
 \[-Evar=x\] \[-f cloginrc-file\] \[-p user-password\] \
@@ -482,9 +484,8 @@ foreach router [lrange $argv $i end] {
     set telnetcmd [join [lindex [find telnetcmd $router] 0] ""]
     if { "$telnetcmd" == "" } { set telnetcmd "@TELNET_CMD@" }
 
-# XXX need to import login_top.
-#    # if [-mM], skip do not login
-#    if { $do_cloginrcdbg > 0 } { continue; }
+    # if [-mM], skip do not login
+    if { $do_cloginrcdbg > 0 } { continue; }
 
     # Login to the router
     if {[login $router $ruser $userpswd $passwd $prompt $cmethod $cyphertype]} {
