--- a/rancid/bin/wlogin.in
+++ b/rancid/bin/wlogin.in
@@ -741,6 +741,7 @@ proc run_commands { prompt command } {
 #
 source_password_file $password_file
 set in_proc 0
+set exitval 0
 foreach router [lrange $argv $i end] {
     set router [string tolower $router]
     # attempt at platform switching.
@@ -866,13 +867,15 @@ foreach router [lrange $argv $i end] {
 
     # Login to the router
     if {[login $router $ruser $userpswd $passwd $enapasswd $cmethod $cyphertype]} {
+	incr exitval
 	# if login failed or rsh was successful, move on to the next device
 	continue
     }
     if { $enable } {
 	if {[do_enable $enauser $enapasswd]} {
 	    if { $do_command || $do_script } {
-		close; wait
+		incr exitval
+		catch {close}; catch {wait};
 		continue
 	    }
 	}
@@ -905,6 +908,7 @@ foreach router [lrange $argv $i end] {
 
     if { $do_command } {
 	if {[run_commands $prompt $command]} {
+	    incr exitval
 	    continue
 	}
     } elseif { $do_script } {
@@ -929,5 +933,4 @@ foreach router [lrange $argv $i end] {
     wait
     sleep 0.3
 }
-exit 0
-
+exit $exitval
