--- a/rancid/lib/Makefile.in
+++ b/rancid/lib/Makefile.in
@@ -274,7 +274,7 @@ my_pkglibdir = $(pkglibdir)
 my_pkglib_DATA = rancid.pm acos.pm aeos.pm arbor.pm bigip.pm ciscowlc.pm \
 		 dell.pm edgemax.pm edgerouter.pm exos.pm foundry.pm \
 		 ios.pm iossb.pm iosshtech.pm iosxr.pm junos.pm mrv.pm nxos.pm \
-		 panos.pm rbt.pm sros.pm wavesvros.pm
+		 onefinity.pm panos.pm rbt.pm sros.pm wavesvros.pm
 
 pkglib_in = $(my_pkglib_DATA:%=%.in)
 RANLIB = :
@@ -543,6 +543,7 @@ junos.pm: junos.pm.in
 rancid.pm: rancid.pm.in
 mrv.pm: mrv.pm.in
 nxos.pm: nxos.pm.in
+onefinity.pm: onefinity.pm.in
 panos.pm: panos.pm.in
 rbt.pm: rbt.pm.in
 sros.pm: sros.pm.in
