--- a/rancid/lib/aeos.pm.in
+++ b/rancid/lib/aeos.pm.in
@@ -99,7 +99,7 @@ sub ShowVersion {
 
     while (<$INPUT>) {
 	tr/\015//d;
-	if (/^$prompt/) { $found_version = 1; last};
+	if (/^$prompt/) {$found_version = 1; last};
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	return(1) if /^% Invalid input/;
 	return(0) if ($found_version);		# Only do this routine once
@@ -144,11 +144,11 @@ sub DiffConfig {
 sub ShowEnv {
     my($INPUT, $OUTPUT, $cmd) = @_;
     print STDERR "    In ShowEnv: $_" if ($debug);
-    my($fans, $supplies, $E0) = (0, 0, undef);
+    my($fans, $E0) = (0, undef);
 
     while (<$INPUT>) {
 	tr/\015//d;
-	if (/^$prompt/) { $found_env = 1; last};
+	if (/^$prompt/) {$found_env = 1; last};
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	return(1) if /^% Invalid input/;
 	return(0) if ($found_env);		# Only do this routine once
@@ -165,14 +165,19 @@ sub ShowEnv {
         }
         $fans && /^\s*(\d+)\s+(\S+)/ &&
             ProcessHistory("COMMENTS","keysort","E1","!Fan $1: $2\n") && next;
-        if (/^Supply\s+Model\s+Capacity/) {
-            $fans = 0;
-            $supplies = 1;
-            next;
+        if (/^supply\s+model\s+capacity/i) {
+	    while (<$INPUT>) {
+		tr/\015//d;
+		last if (/^\s*/);
+		if (/^$prompt/) {$found_version = 1; last};
+		/^\s*(\d+)\s+(\S+)\s+(\S+)\s+\S+\s+\S+\s+\S+\s+(\S+)/ &&
+		    ProcessHistory("COMMENTS","keysort","E2","!Power Supply $1: $2 $3 $4\n");
+		    next;
+		/^\s*Total\s+\S+\s+(\S+)\s+/ &&
+		    ProcessHistory("COMMENTS","keysort","E2","!Power Total: $1\n") &&
+		    next;;
+            }
         }
-        $supplies && /^\s*(\d+)\s+(\S+)\s+(\S+)\s+\S+\s+\S+\s+\S+\s+(.+)/ &&
-            ProcessHistory("COMMENTS","keysort","E2","!Power Supply $1: $2 $3 $4\n" ) &&
-	    next;
     }
     ProcessHistory("COMMENTS","","","!\n");
     return(0);
@@ -209,8 +214,8 @@ sub ShowBootExt {
 	tr/\015//d;
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
-	return(1) if /^% Invalid input/;
-        return(0) if /^% Error displaying /;
+	return(1) if (/^% Invalid input/);
+        return(0) if (/^% Error displaying /);
 
 	if (!defined($C0)) {
 	    $C0 = 1; ProcessHistory("COMMENTS","","","!\n");
